[package]
name = "rusty_games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.76", features = ["backtrace"] }
ash = { version = "0.37.3", features = ["linked"] }
glfw = { version = "0.54.0", features = ["vulkan"] }