[package]
name = "rusty_games"
version = "0.1.0"
edition = "2021"

[features]
enable_validations = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.76", features = ["backtrace"] }
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
simple_logger = "4.3.0"
tracing = { version = "0.1.40", features = ["log-always"] }
winit = "0.29.15"
